Subir el index otra vez

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Ruddy Del Rosario</h1>
     <h2>Sitio web</h2>
     <p>Portafolio Online</p>
+    <p>HTTP - CSS - JavaScript</p>
 </body>
 </html>
